# LangHuan

./: Cargo.toml
fany/: Cargo.toml
fany/src/: error.rs  http.rs  lib.rs  module.rs  package.rs  runtime.rs  schema.rs
fany/src/module/: json.rs
fany/src/package/: json.rs  url.rs
fany/src/runtime/: schema_status.rs
fany/src/schema/: book_info.rs  chapter.rs  info_parser.rs  search.rs  session.rs  toc.rs
langhuan/: Cargo.toml
langhuan/src/: http.rs  lib.rs  runtime.rs  schema.rs
langhuan/src/package/: json.rs
langhuan/src/schema/: book_info.rs  info_parser.rs  session.rs
shu/: Cargo.toml
shu/ui/: app-window.slint
