[package]
edition = "2021"
name = "fany"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing.workspace = true

mlua = { version = "0.10", features = ["send", "async", "luau", "error-send", "serialize"] }
nom = "7.1"
serde_json = "1.0"
bytes = "1.9"

uuid = { version = "1.11", features = ["v4"] }
