[package]
edition = "2021"
name = "fany"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing.workspace = true

mlua = { version = "0.10", features = [
    "send",
    "async",
    "luau",
    "error-send",
    "serialize",
] }
nom = "7.1"
serde_json = { version = "1.0", optional = true }
bytes = "1.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.12"
url = "*"
percent-encoding = { version = "2.3", optional = true }
encoding_rs = { version = "0.8", features = [
    "fast-legacy-encode",
], optional = true }

[features]
pkg-json = ["serde_json"]
pkg-url-encoding = ["percent-encoding", "encoding_rs"]

default = ["pkg-json", "pkg-url-encoding"]
